<?xml version="1.0"?>
<package>
  <name>nurbs</name>
  <version>1.0.0</version>
  <description>ROSified package for libnurbs</description>
  <maintainer email="dv_frost@mail.ru">Dmitry Kargin</maintainer>
  <license>BSD, see README for details</license>
<!--
  <url type="website">http://ompl.kavrakilab.org</url>
  <url type="bugtracker">https://bitbucket.org/ompl/ompl/issues</url>
  <url type="repository">https://bitbucket.org/ompl/ompl/</url>
-->
  <author>see README for details</author>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>cmake</build_depend>
<!--
  <build_depend>boost</build_depend>

  <run_depend>boost</run_depend>
-->
  <export>
    <build_type>cmake</build_type>
  </export>
</package>
